<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">


    <com.lrchao.views.scrollview.MyScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/job_gray_bg"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            >

            <!-- 头部-->
            <include
                layout="@layout/job_layout_job_details_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <!-- 工作时间  工作地点-->
            <include
                layout="@layout/job_layout_job_details_date_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <!-- 薪资 福利 -->
            <include
                layout="@layout/job_layout_job_details_salary_welfare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>


            <!-- 面试 -->
            <include
                layout="@layout/job_layout_job_details_interview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <!-- 公司信息 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="6dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/app_name"
                    android:background="@color/job_yellow_FFCC00"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/job_company_info"/>

                <TextView android:id="@+id/tv_company_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:textColor="@color/black"/>


            </LinearLayout>

            <!-- 其他人 还看了 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="6dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/app_name"
                    android:background="@color/job_yellow_FFCC00"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/job_other_see"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/job_gray_divider"/>

            <com.lrchao.views.itemview.ItemGroupLayout
                android:id="@+id/layout_other_jobs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </com.lrchao.views.scrollview.MyScrollView>

    <TextView android:id="@+id/tv_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/job_yellow_FE8020"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/job_join"
        android:textColor="@color/white"/>
</LinearLayout>